# healmymind-backend

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Procfile  QUICKSTART.md  README.md  SECURITY.md  conftest.py  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  render.yaml  requirements.txt  run.bat  run.ps1  run.sh  setup.cfg  setup.sh
.github/workflows/: ci.yml
blog/: models.py  serializers.py  urls.py
chat/: models.py  serializers.py  urls.py
healmymind/: apps.py  asgi.py  celery.py  constants.py  decorators.py  exceptions.py  middleware.py  pagination.py  permissions.py  settings.py  signals.py  tasks.py  utils.py  validators.py  wsgi.py
k8s/: deployment.yaml
scripts/: assets.py  backup.py  cache.py  config.py  db.sh  deploy.sh  generate_docs.py  i18n.py  init.sh  lint.py  logs.py  manage.sh  manage_deps.py  migrate.py  monitor.sh  notifications.py  profile.py  security_check.py  seed.py  test.sh  users.py
tests/: models.py  serializers.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
