[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/migrations/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip = ["migrations", "venv"]
skip_glob = ["*/migrations/*"]
known_first_party = ["healmymind"]
known_third_party = [
    "django",
    "rest_framework",
    "celery",
    "pymongo",
    "redis",
    "pytest",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "healmymind.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers -ra -q --cov=. --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "manage.py",
    "setup.py",
    "conftest.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/settings.py",
    "*/urls.py",
    "*/admin.py",
    "*/apps.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "raise Exception",
    "except Exception:",
    "def main",
]
ignore_errors = true
fail_under = 90

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "healmymind.settings"

[tool.bandit]
exclude_dirs = ["tests", "venv", "migrations"]
tests = [
    "B101",
    "B102",
    "B103",
    "B104",
    "B105",
    "B106",
    "B107",
    "B108",
    "B110",
    "B112",
    "B201",
    "B301",
    "B302",
    "B303",
    "B304",
    "B305",
    "B306",
    "B307",
    "B308",
    "B309",
    "B310",
    "B311",
    "B312",
    "B313",
    "B314",
    "B315",
    "B316",
    "B317",
    "B318",
    "B319",
    "B320",
    "B321",
    "B322",
    "B323",
    "B324",
    "B325",
]

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name
]
ignore = ["migrations", "venv"]
ignore-patterns = ["test_.*?py"]
good-names = ["i", "j", "k", "ex", "Run", "_", "pk", "id"]

[tool.poetry]
name = "healmymind"
version = "0.1.0"
description = "Mental health screening and support platform"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://healmymindai.com"
repository = "https://github.com/yourusername/healmymind"
documentation = "https://docs.healmymindai.com"
keywords = ["mental health", "ai", "healthcare", "psychology"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
djongo = "^1.3.6"
pymongo = {version = "^3.12.3", extras = ["srv"]}
python-dotenv = "^1.0.1"
celery = "^5.3.6"
redis = "^5.0.1"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-django = "^4.8.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"
bandit = "^1.7.7"
safety = "^2.3.5"
pre-commit = "^3.6.1"

[tool.poetry.scripts]
start = "manage:main"
