[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info,venv,migrations
ignore = E203,W503
per-file-ignores =
    __init__.py:F401,F403
    tests/*:S101,S105,S106

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100
skip = migrations,venv
skip_glob = */migrations/*
known_first_party = healmymind
known_third_party = django,rest_framework,celery,pymongo,redis

[mypy]
python_version = 3.11
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
strict_optional = True
plugins = mypy_django_plugin.main,mypy_drf_plugin.main

[mypy.plugins.django-stubs.main]
django_settings_module = healmymind.settings

[mypy-*.migrations.*]
ignore_errors = True

[tool:pytest]
DJANGO_SETTINGS_MODULE = healmymind.settings
python_files = tests.py test_*.py *_tests.py
addopts = --strict-markers -ra -q --cov=. --cov-report=term-missing
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
source = .
omit =
    */migrations/*
    */tests/*
    */venv/*
    manage.py
    setup.py
    conftest.py
    */wsgi.py
    */asgi.py
    */settings.py
    */urls.py
    */admin.py
    */apps.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    except ImportError:
    raise Exception
    except Exception:
    def main
ignore_errors = True
fail_under = 90

[bandit]
exclude = tests,venv,migrations
tests = B101,B102,B103,B104,B105,B106,B107,B108,B110,B112,B201,B301,B302,B303,B304,B305,B306,B307,B308,B309,B310,B311,B312,B313,B314,B315,B316,B317,B318,B319,B320,B321,B322,B323,B324,B325

[black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/migrations/
'''

[pycodestyle]
max_line_length = 100
exclude = .git,__pycache__,build,dist,*.egg-info,venv,migrations

[pydocstyle]
convention = google
add-ignore = D100,D104
match-dir = (?!tests)(?!migrations)(?!venv)[^\.].*

[pylint]
max-line-length = 100
disable = C0111,R0903,C0103
ignore = migrations,venv
ignore-patterns = test_.*?py
good-names = i,j,k,ex,Run,_,pk,id

[mypy-*.migrations.*]
ignore_errors = True

[mypy.plugins.django-stubs.main]
django_settings_module = "healmymind.settings"

[options]
python_requires = >=3.11
